development revision 354 from SF SVN
Matches last SVN revision from SourceForge

--- a/Extensions/Terrain/Source/Extension Terrain.vcproj
+++ b/Extensions/Terrain/Source/Extension Terrain.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="Extension Terrain"
 	ProjectGUID="{7D7F9530-C61A-4BF2-B1C8-DE9D369880B6}"
 	RootNamespace="Extension_Terrain"
@@ -83,7 +83,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(ProjectDir)../../../Horde3D/Build/$(ProjectName)/$(ConfigurationName)"
-			IntermediateDirectory="$(ProjectDir)../../../Horde3D/Build\$(ProjectName)\$(ConfigurationName)"
+			IntermediateDirectory="$(ProjectDir)../../../Horde3D/Build/$(ProjectName)/$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
