--- a/Horde3D/Source/ColladaConverter/Collada Converter.vcproj
+++ b/Horde3D/Source/ColladaConverter/Collada Converter.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="Collada Converter"
 	ProjectGUID="{17F40F35-7889-4373-AF53-EA87B9009556}"
 	RootNamespace="ColladaConv"
@@ -18,7 +18,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(ProjectDir)../../Build/$(ProjectName)/$(ConfigurationName)"
-			IntermediateDirectory="$(ProjectDir)../../Build\$(ProjectName)/$(ConfigurationName)"
+			IntermediateDirectory="$(ProjectDir)../../Build/$(ProjectName)/$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="2"
 			>
