--- a/Horde3D/Samples/Knight/CMakeLists.txt
+++ b/Horde3D/Samples/Knight/CMakeLists.txt
@@ -1,6 +1,10 @@
-
 include_directories(../../Bindings/C++)
-include_directories(../glfw)
+
+ExternalProject_Get_Property(project_glfw GLFW_SOURCE_DIR)
+# message(STATUS "GLFW include path for Knight: ${GLFW_SOURCE_DIR}")
+include_directories(${GLFW_SOURCE_DIR}/include)
+link_directories(${GLFW_SOURCE_DIR}/src/Debug)
+
 
 IF(MSVC)
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
@@ -13,12 +17,12 @@ add_executable(Knight WIN32 MACOSX_BUNDLE
 	)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-target_link_libraries(Knight Horde3D Horde3DUtils glfw)
+target_link_libraries(Knight Horde3D Horde3DUtils glfw3)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 FIND_LIBRARY(X11_LIBRARY X11)
-target_link_libraries(Knight Horde3D Horde3DUtils glfw ${X11_LIBRARY})
+target_link_libraries(Knight Horde3D Horde3DUtils glfw3 ${X11_LIBRARY})
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -26,5 +30,6 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	   FIND_LIBRARY(COCOA_LIBRARY Cocoa)
        FIND_LIBRARY(APPLICATION_SERVICES_LIBRARY ApplicationServices)
        FIND_LIBRARY(AGL_LIBRARY AGL)
-       target_link_libraries(Knight Horde3D Horde3DUtils glfw ${COCOA_LIBRARY} ${APPLICATION_SERVICES_LIBRARY} ${AGL_LIBRARY})
+       FIND_LIBRARY(IOKIT IOKit)
+       target_link_libraries(Knight Horde3D Horde3DUtils glfw3 ${IOKIT} ${COCOA_LIBRARY} ${APPLICATION_SERVICES_LIBRARY} ${AGL_LIBRARY})
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
