Apparently the problem was that I wasn't including the external project as a dependency. Now it build (find glfw3.h and libglfw3.a)… but I need to run 2 times cmake -G Xcode to get terrain sample to work. Knight and Chicago work correctly on first cmake -G Xcode

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,4 @@ Horde3D.xcodeproj
 Horde3D/Samples/project_glfw-prefix
 project_glfw-prefix/src/project_glfw-stamp
 project_glfw-prefix
+downloaded_zip
