--- a/Horde3D/Samples/Chicago/CMakeLists.txt
+++ b/Horde3D/Samples/Chicago/CMakeLists.txt
@@ -1,9 +1,8 @@
 include_directories(../../Bindings/C++)
 
-ExternalProject_Get_Property(project_glfw GLFW_SOURCE_DIR)
-# message(STATUS "GLFW include path for Chicago: ${GLFW_SOURCE_DIR}")
-include_directories(${GLFW_SOURCE_DIR}/include)
-link_directories(${GLFW_SOURCE_DIR}/src/Debug)
+ExternalProject_Get_Property(project_glfw install_dir)
+include_directories(${install_dir}/src/project_glfw/include)
+link_directories(${install_dir}/src/project_glfw-build/src/Debug)
 
 IF(MSVC)
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
@@ -16,6 +15,8 @@ add_executable(Chicago WIN32 MACOSX_BUNDLE
 	crowd.cpp
 	main.cpp
 	)
+
+add_dependencies(Chicago project_glfw)
 	
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 target_link_libraries(Chicago Horde3D Horde3DUtils glfw3)
