--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -1,10 +1,10 @@
 include_directories(../Bindings/C++)
 include_directories(../../../Horde3D/Bindings/C++)
 
-ExternalProject_Get_Property(project_glfw GLFW_SOURCE_DIR)
-# message(STATUS "GLFW include path for Terrain: ${GLFW_SOURCE_DIR}")
-include_directories(${GLFW_SOURCE_DIR}/include)
-link_directories(${GLFW_SOURCE_DIR}/src/Debug)
+ExternalProject_Get_Property(project_glfw install_dir)
+include_directories(${install_dir}/src/project_glfw/include)
+link_directories(${install_dir}/src/project_glfw-build/src/Debug)
+
 
 IF(MSVC)
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
@@ -15,6 +15,7 @@ add_executable(Terrain WIN32 MACOSX_BUNDLE
 	app.cpp
 	main.cpp
 	)
+add_dependencies(Terrain project_glfw)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 target_link_libraries(Terrain Horde3D Horde3DUtils glfw3)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
