--- a/Horde3D/Bindings/C#/Source/Horde3D .NET/Horde3D.NET.dll.csproj
+++ b/Horde3D/Bindings/C#/Source/Horde3D .NET/Horde3D.NET.dll.csproj
@@ -29,10 +29,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Horde3D.cs" />
     <Compile Include="Horde3D_Import.cs" />
+    <Compile Include="OpenGL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Horde3D_Properties.cs" />
     <Compile Include="Horde3DUtils.cs" />
