--- a/Extensions/Terrain/CMakeLists.txt
+++ b/Extensions/Terrain/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(Bindings)
 add_subdirectory(Source)
-add_subdirectory(Sample)
+
+IF(GLFW_FOUND)
+    add_subdirectory(Sample)
+ENDIF(GLFW_FOUND)
