--- a/Horde3D/Samples/CMakeLists.txt
+++ b/Horde3D/Samples/CMakeLists.txt
@@ -1,4 +1,4 @@
-
-add_subdirectory(glfw)
-add_subdirectory(Chicago)
-add_subdirectory(Knight)
+IF(GLFW_FOUND)
+    add_subdirectory(Chicago)
+    add_subdirectory(Knight)
+ENDIF(GLFW_FOUND)
