Initial (Linux-only) support to build GLFW as a CMake's "ExternalProject_add" target.

--- a/Extensions/Terrain/CMakeLists.txt
+++ b/Extensions/Terrain/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(Bindings)
 add_subdirectory(Source)
 
 IF(GLFW_FOUND)
+    include_directories(${GLFW_INCLUDE_DIR})
     add_subdirectory(Sample)
 ENDIF(GLFW_FOUND)
