--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(Terrain WIN32 MACOSX_BUNDLE
 	)
 	
 target_link_libraries(Terrain Horde3D Horde3DUtils ${GLFW_LIBRARIES})
+
+add_dependencies(Terrain project_glfw)
