Big cleanup of root "CMakeLists.txt" (with better extensions handling).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,38 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
-# Avoid warning under CMake 2.6
+# Avoid warning under CMake 2.6.
 cmake_policy(SET CMP0003 NEW)
 
 project(Horde3D)
 
-# Look for requisities.
-include(Requisities/Requisities.txt)
-
-# accumulate list of sources of extension modules
-# this can not be done inside the Extensions folder since cmake can only pass variables to subdirectories, never upwards...
-set(HORDE3D_EXTENSION_INSTALLS)
-set(HORDE3D_EXTENSION_INCLUDE_DIRS)
-set(HORDE3D_EXTENSION_LIBS)
-
-
-# terrain extension (check egExtensions.cpp if it's activated)
-option(HORDE3D_BUILD_TERRAIN "Build the terrain extension into Horde3D" ON)
-if(HORDE3D_BUILD_TERRAIN)
-	add_subdirectory(Extensions/Terrain)
-	set(HORDE3D_EXTENSION_INSTALLS
-		${HORDE3D_EXTENSION_INSTALLS}
-		"extMan().installExtension( new Horde3DTerrain::ExtTerrain() );\n"		
-	)
-	set(HORDE3D_EXTENSION_INCLUDES
-		${HORDE3D_EXTENSION_INCLUDES}
-		"\n#include \"Extensions/Terrain/Source/extension.h\"\n"
-	)
-	set(HORDE3D_EXTENSION_LIBS
-		${HORDE3D_EXTENSION_LIBS}
-		Horde3DTerrain		
-	)
-endif(HORDE3D_BUILD_TERRAIN)
-
+# Set binaries output folder.
 IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
   IF(WIN32)
 	IF(MSVC)
@@ -68,8 +41,9 @@ ELSE("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
   ENDIF(WIN32) 
 ENDIF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
 
-# create egExtensions.cpp
-CONFIGURE_FILE(Horde3D/Source/Horde3DEngine/egExtensions_auto_include.h.in ${CMAKE_BINARY_DIR}/egExtensions_auto_include.h)
-CONFIGURE_FILE(Horde3D/Source/Horde3DEngine/egExtensions_auto_install.h.in ${CMAKE_BINARY_DIR}/egExtensions_auto_install.h)
+# Requisities and targets.
+include(Requisities/Requisities.txt)
+include(Extensions/Extensions.txt)
+
 add_subdirectory(Horde3D)
 
