Changed default binary output path pattern.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-# Avoid warning under CMake 2.6.
-cmake_policy(SET CMP0003 NEW)
-
 # Project details.
 project(Horde3D)
 
@@ -25,40 +22,16 @@ IF(GLFW_FOUND)
 ENDIF(GLFW_FOUND)
 
 # Set binaries output folder.
-IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
-  IF(WIN32)
-	IF(MSVC)
-	    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries
-		  CACHE STRING "Where binaries and .dll files go" FORCE)  
-	ELSE(MSVC)
-	    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
-		  CACHE STRING "Where binaries and .dll files go" FORCE)  
-	ENDIF(MSVC)
-  ELSE(WIN32)
-    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/${CMAKE_SYSTEM_NAME}
-	    CACHE STRING "Where binaries and .dll files go" FORCE)
-  ENDIF(WIN32)
-ELSE("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)    
-  IF(WIN32)
-	IF(MSVC)
-		SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries 
-		CACHE STRING "Where executable files go" FORCE)
-	ELSE(MSVC)
-		SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
-		CACHE STRING "Where executable files go" FORCE)  	
-	ENDIF(MSVC)
-	IF(MSVC)
-		SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries
-		CACHE STRING "Where dll files go" FORCE)  
-	ELSE(MSVC)
-		SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
-		CACHE STRING "Where dll files go" FORCE)  
-	ENDIF(MSVC)		
-  ELSE(WIN32)
-     SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/${CMAKE_SYSTEM_NAME}
-	  CACHE STRING "Where executable files go" FORCE)    
-  ENDIF(WIN32) 
-ENDIF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
+SET(HORDE3D_BUILD_TYPE ${CMAKE_CFG_INTDIR})
+IF(HORDE3D_BUILD_TYPE STREQUAL ".")
+SET(HORDE3D_BUILD_TYPE ${CMAKE_BUILD_TYPE})
+ENDIF(HORDE3D_BUILD_TYPE STREQUAL ".")
+IF(NOT HORDE3D_BUILD_TYPE)
+SET(HORDE3D_BUILD_TYPE "Release")
+ENDIF(NOT HORDE3D_BUILD_TYPE)
+
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Binaries/${CMAKE_SYSTEM_NAME}/${HORDE3D_BUILD_TYPE}/
+    CACHE STRING "Where binaries and shared lib files go" FORCE)
 
 # Manage extensions.
 include(Extensions/Extensions.txt)
