Added support for content collecting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,15 +22,16 @@ IF(GLFW_FOUND)
 ENDIF(GLFW_FOUND)
 
 # Set binaries output folder.
-SET(HORDE3D_BUILD_TYPE ${CMAKE_CFG_INTDIR})
-IF(HORDE3D_BUILD_TYPE STREQUAL ".")
-SET(HORDE3D_BUILD_TYPE ${CMAKE_BUILD_TYPE})
-ENDIF(HORDE3D_BUILD_TYPE STREQUAL ".")
-IF(NOT HORDE3D_BUILD_TYPE)
-SET(HORDE3D_BUILD_TYPE "Release")
-ENDIF(NOT HORDE3D_BUILD_TYPE)
+SET(HORDE3D_OUTPUT_PATH_PREFIX "${PROJECT_SOURCE_DIR}/Binaries")
+SET(HORDE3D_OUTPUT_PATH_SUFFIX "")
+IF(${CMAKE_CFG_INTDIR} STREQUAL ".")
+    SET(HORDE3D_OUTPUT_PATH_SUFFIX ${CMAKE_BUILD_TYPE})
+    IF(NOT HORDE3D_OUTPUT_PATH_SUFFIX)
+        SET(HORDE3D_OUTPUT_PATH_SUFFIX "Release")
+    ENDIF(NOT HORDE3D_OUTPUT_PATH_SUFFIX)
+ENDIF(${CMAKE_CFG_INTDIR} STREQUAL ".")
 
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Binaries/${CMAKE_SYSTEM_NAME}/${HORDE3D_BUILD_TYPE}/
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HORDE3D_OUTPUT_PATH_PREFIX}/${CMAKE_SYSTEM_NAME}/${HORDE3D_OUTPUT_PATH_SUFFIX}
     CACHE STRING "Where binaries and shared lib files go" FORCE)
 
 # Manage extensions.
