--- a/Horde3D/Binaries/CMakeLists.txt
+++ b/Horde3D/Binaries/CMakeLists.txt
@@ -1,8 +1,14 @@
-# Copy platform-dependent files to runtime output path.
-FILE(GLOB_RECURSE in_file_list ${CMAKE_SYSTEM_NAME}/*)
-FOREACH(in_file ${in_file_list})
-    FILE(COPY ${in_file} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-ENDFOREACH(in_file)
-
 # Copy content assets to output path.
 FILE(COPY Content DESTINATION ${HORDE3D_OUTPUT_PATH_PREFIX})
+
+# Copy platform-dependent files to runtime output path.
+ADD_CUSTOM_TARGET(CopyPlatformFiles ALL)
+
+SET(out_dir ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+IF(NOT ${CMAKE_CFG_INTDIR} STREQUAL ".")
+    SET(out_dir ${out_dir}/${CMAKE_CFG_INTDIR}/)
+ENDIF(NOT ${CMAKE_CFG_INTDIR} STREQUAL ".")
+
+ADD_CUSTOM_COMMAND(TARGET CopyPlatformFiles PRE_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E
+                   copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_NAME} ${out_dir})
