Binaries folder is now created inside build path (out-of-source build).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ IF(GLFW_FOUND)
 ENDIF(GLFW_FOUND)
 
 # Set binaries output folder.
-SET(HORDE3D_OUTPUT_PATH_PREFIX "${PROJECT_SOURCE_DIR}/Binaries")
+SET(HORDE3D_OUTPUT_PATH_PREFIX "${PROJECT_BINARY_DIR}/Binaries")
 SET(HORDE3D_OUTPUT_PATH_SUFFIX "")
 IF(${CMAKE_CFG_INTDIR} STREQUAL ".")
     SET(HORDE3D_OUTPUT_PATH_SUFFIX ${CMAKE_BUILD_TYPE})
