Added sample framework with a base application class.

--- a/Horde3D/Samples/CMakeLists.txt
+++ b/Horde3D/Samples/CMakeLists.txt
@@ -1,5 +1,8 @@
+include_directories(../Bindings/C++)
+
 IF(GLFW_FOUND)
     include_directories(${GLFW_INCLUDE_DIR})
+    add_subdirectory(Framework)
     add_subdirectory(Chicago)
     add_subdirectory(Knight)
 ENDIF(GLFW_FOUND)
