--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ ENDIF(${CMAKE_CFG_INTDIR} STREQUAL ".")
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HORDE3D_OUTPUT_PATH_PREFIX}/${CMAKE_SYSTEM_NAME}/${HORDE3D_OUTPUT_PATH_SUFFIX}
     CACHE STRING "Where binaries and shared lib files go" FORCE)
 
+IF(MSVC)
+    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
+ENDIF(MSVC)
+
 # Manage extensions.
 include(Extensions/Extensions.txt)
 
