Converted existing samples to use new sample framework.

--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -1,16 +1,11 @@
-
 include_directories(../Bindings/C++)
 include_directories(../../../Horde3D/Bindings/C++)
 
-IF(MSVC)
-SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
-ENDIF(MSVC)
-
 add_executable(Terrain WIN32 MACOSX_BUNDLE
-	app.h
+    ../../../Horde3D/Samples/Framework/app.cpp
 	app.cpp
 	main.cpp
-	)
+)
 	
 target_link_libraries(Terrain Horde3D Horde3DUtils ${GLFW_LIBRARIES})
 
