--- a/Horde3D/Samples/Knight/CMakeLists.txt
+++ b/Horde3D/Samples/Knight/CMakeLists.txt
@@ -1,15 +1,8 @@
-
-include_directories(../../Bindings/C++)
-
-IF(MSVC)
-SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
-ENDIF(MSVC)
-
 add_executable(Knight WIN32 MACOSX_BUNDLE
-	app.h
-	app.cpp
-	main.cpp
-	)
+    ../Framework/app.cpp
+    app.cpp
+    main.cpp
+)
 
 target_link_libraries(Knight Horde3D Horde3DUtils ${GLFW_LIBRARIES})
 
