Renamed Framework's "app.(h/cpp)" files to "sampleapp.(h/cpp)" to avoid confusion.

--- a/Horde3D/Samples/Chicago/CMakeLists.txt
+++ b/Horde3D/Samples/Chicago/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(Chicago WIN32 MACOSX_BUNDLE
-    ../Framework/app.cpp
+    ../Framework/sampleapp.cpp
 	app.cpp
 	crowd.cpp
 	main.cpp
