Add dependencies to SampleFramework
The missing dependencies were causing build order issues on Xcode

--- a/Extensions/Terrain/Sample/CMakeLists.txt
+++ b/Extensions/Terrain/Sample/CMakeLists.txt
@@ -9,6 +9,6 @@ add_executable(Terrain WIN32 MACOSX_BUNDLE
 	
 target_link_libraries(Terrain Horde3D Horde3DUtils ${GLFW_LIBRARIES})
 
-add_dependencies(Terrain project_glfw)
+add_dependencies(Terrain SampleFramework)
 
 file(COPY Content DESTINATION ${HORDE3D_OUTPUT_PATH_PREFIX})
