--- a/Horde3D/Samples/Knight/CMakeLists.txt
+++ b/Horde3D/Samples/Knight/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(Knight WIN32 MACOSX_BUNDLE
 
 target_link_libraries(Knight Horde3D Horde3DUtils ${GLFW_LIBRARIES})
 
-add_dependencies(Knight project_glfw)
+add_dependencies(Knight SampleFramework)
