Revert "Fixed minimal cmake version"
This reverts commit f11d59f5c7fe1f09c0043a875dbcef1b46787266.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,46 +1,78 @@
-cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 2.4)
 
-# Project details.
+# Avoid warning under CMake 2.6
+IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
+  cmake_policy(SET CMP0003 NEW)
+ENDIF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
+
 project(Horde3D)
 
-SET(${PROJECT_NAME}_MAJOR_VERSION 1)
-SET(${PROJECT_NAME}_MINOR_VERSION 0)
-SET(${PROJECT_NAME}_PATCH_LEVEL 0)
+# accumulate list of sources of extension modules
+# this can not be done inside the Extensions folder since cmake can only pass variables to subdirectories, never upwards...
+set(HORDE3D_EXTENSION_INSTALLS)
+set(HORDE3D_EXTENSION_INCLUDE_DIRS)
+set(HORDE3D_EXTENSION_LIBS)
 
-# Add local repository for FindXXX.cmake modules.
-SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/Modules/" ${CMAKE_MODULE_PATH})
 
-# Check for strncpy_s function.
+# terrain extension (check egExtensions.cpp if it's activated)
+option(HORDE3D_BUILD_TERRAIN "Build the terrain extension into Horde3D" ON)
+if(HORDE3D_BUILD_TERRAIN)
+	add_subdirectory(Extensions/Terrain)
+	set(HORDE3D_EXTENSION_INSTALLS
+		${HORDE3D_EXTENSION_INSTALLS}
+		"extMan().installExtension( new Horde3DTerrain::ExtTerrain() );\n"		
+	)
+	set(HORDE3D_EXTENSION_INCLUDES
+		${HORDE3D_EXTENSION_INCLUDES}
+		"\n#include \"Extensions/Terrain/Source/extension.h\"\n"
+	)
+	set(HORDE3D_EXTENSION_LIBS
+		${HORDE3D_EXTENSION_LIBS}
+		Horde3DTerrain		
+	)
+endif(HORDE3D_BUILD_TERRAIN)
+
+IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
+  IF(WIN32)
+	IF(MSVC)
+	    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries
+		  CACHE STRING "Where binaries and .dll files go" FORCE)  
+	ELSE(MSVC)
+	    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
+		  CACHE STRING "Where binaries and .dll files go" FORCE)  
+	ENDIF(MSVC)
+  ELSE(WIN32)
+    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/${CMAKE_SYSTEM_NAME}
+	    CACHE STRING "Where binaries and .dll files go" FORCE)
+  ENDIF(WIN32)
+ELSE("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)    
+  IF(WIN32)
+	IF(MSVC)
+		SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries 
+		CACHE STRING "Where executable files go" FORCE)
+	ELSE(MSVC)
+		SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
+		CACHE STRING "Where executable files go" FORCE)  	
+	ENDIF(MSVC)
+	IF(MSVC)
+		SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries
+		CACHE STRING "Where dll files go" FORCE)  
+	ELSE(MSVC)
+		SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/Win32
+		CACHE STRING "Where dll files go" FORCE)  
+	ENDIF(MSVC)		
+  ELSE(WIN32)
+     SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Horde3D/Binaries/${CMAKE_SYSTEM_NAME}
+	  CACHE STRING "Where executable files go" FORCE)    
+  ENDIF(WIN32) 
+ENDIF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.4)
+
+# create egExtensions.cpp
+CONFIGURE_FILE(Horde3D/Source/Horde3DEngine/egExtensions_auto_include.h.in ${CMAKE_BINARY_DIR}/egExtensions_auto_include.h)
+CONFIGURE_FILE(Horde3D/Source/Horde3DEngine/egExtensions_auto_install.h.in ${CMAKE_BINARY_DIR}/egExtensions_auto_install.h)
+
 include(CheckFunctionExists)
 check_function_exists(strncpy_s HAVE_STRNCPY_S)
 
-# Look for required GLFW library.
-option(HORDE3D_FORCE_DOWNLOAD_GLFW "Force linking Horde3D to a downloaded version of GLFW" OFF)
-find_package(GLFW)
-IF(GLFW_FOUND)
-    include_directories(${GLFW_INCLUDE_DIR})
-ENDIF(GLFW_FOUND)
-
-# Set binaries output folder.
-SET(HORDE3D_OUTPUT_PATH_PREFIX "${PROJECT_BINARY_DIR}/Binaries")
-SET(HORDE3D_OUTPUT_PATH_SUFFIX "")
-IF(${CMAKE_CFG_INTDIR} STREQUAL ".")
-    SET(HORDE3D_OUTPUT_PATH_SUFFIX ${CMAKE_BUILD_TYPE})
-    IF(NOT HORDE3D_OUTPUT_PATH_SUFFIX)
-        SET(HORDE3D_OUTPUT_PATH_SUFFIX "Release")
-    ENDIF(NOT HORDE3D_OUTPUT_PATH_SUFFIX)
-ENDIF(${CMAKE_CFG_INTDIR} STREQUAL ".")
-
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HORDE3D_OUTPUT_PATH_PREFIX}/${CMAKE_SYSTEM_NAME}/${HORDE3D_OUTPUT_PATH_SUFFIX}
-    CACHE STRING "Where binaries and shared lib files go" FORCE)
-
-IF(MSVC)
-    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
-ENDIF(MSVC)
-
-# Manage extensions.
-include(Extensions/Extensions.txt)
-
-# Add engine target.
 add_subdirectory(Horde3D)
 
