Updated CMake files to include new render device implementations.

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -19,6 +19,8 @@ set(HORDE3D_SOURCES
 	egPipeline.cpp
 	egPrimitives.cpp
 	egRendererBase.cpp
+	egRendererBaseGL2.cpp
+	egRendererBaseGL4.cpp
 	egRenderer.cpp
 	egResource.cpp
 	egScene.cpp
@@ -44,6 +46,8 @@ set(HORDE3D_SOURCES
 	egPrimitives.h
 	egRenderer.h
 	egRendererBase.h
+	egRendererBaseGL2.h
+	egRendererBaseGL4.h
 	egResource.h
 	egScene.h
 	egSceneGraphRes.h
@@ -84,7 +88,7 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	set_target_properties(Horde3D PROPERTIES
 		FRAMEWORK TRUE
-		PRIVATE_HEADER "egAnimatables.h;egAnimation.h;egCamera.h;egCom.h;egExtensions.h;egGeometry.h;egLight.h;egMaterial.h;egModel.h;egModules.h;egParticle.h;egPipeline.h;egPrerequisites.h;egPrimitives.h;egRenderer.h;egRendererBase.h;egResource.h;egScene.h;egSceneGraphRes.h;egShader.h;egTexture.h;utImage.h;utTimer.h;utOpenGL.h;"
+		PRIVATE_HEADER "egAnimatables.h;egAnimation.h;egCamera.h;egCom.h;egExtensions.h;egGeometry.h;egLight.h;egMaterial.h;egModel.h;egModules.h;egParticle.h;egPipeline.h;egPrerequisites.h;egPrimitives.h;egRenderer.h;egRendererBase.h;egRendererBaseGL2.h;egRendererBaseGL4.h;egResource.h;egScene.h;egSceneGraphRes.h;egShader.h;egTexture.h;utImage.h;utTimer.h;utOpenGL.h;"
 		PUBLIC_HEADER "../../Bindings/C++/Horde3D.h")
 	
 	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
