Added new files to cmake

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -8,6 +8,7 @@ set(HORDE3D_SOURCES
 	egAnimation.cpp
 	egCamera.cpp
 	egCom.cpp
+	egCompute.cpp
 	egExtensions.cpp
 	egGeometry.cpp
 	egLight.cpp
@@ -33,6 +34,7 @@ set(HORDE3D_SOURCES
 	egAnimation.h
 	egCamera.h
 	egCom.h
+	egCompute.h
 	egExtensions.h
 	egGeometry.h
 	egLight.h
