Fix cmake search for opengl on linux

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -78,7 +78,8 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	target_link_libraries(Horde3D GL ${HORDE3D_EXTENSION_LIBS})
+	FIND_PACKAGE(OpenGL REQUIRED)
+	target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${HORDE3D_EXTENSION_LIBS})
 	install(TARGETS Horde3D
 		RUNTIME DESTINATION bin
 		LIBRARY DESTINATION lib
