--- a/Horde3D/Samples/CMakeLists.txt
+++ b/Horde3D/Samples/CMakeLists.txt
@@ -5,4 +5,6 @@ IF(GLFW_FOUND)
     add_subdirectory(Framework)
     add_subdirectory(Chicago)
     add_subdirectory(Knight)
+	add_subdirectory(ParticleVortex)
+	add_subdirectory(Tessellator)
 ENDIF(GLFW_FOUND)
