--- a/Horde3D/Bindings/C#/Source/Samples/Chicago .NET/sample - Chicago .NET.csproj
+++ b/Horde3D/Bindings/C#/Source/Samples/Chicago .NET/sample - Chicago .NET.csproj
@@ -63,7 +63,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <OutputPath>..\..\Binaries\Win32\</OutputPath>
+    <OutputPath>..\..\..\..\..\Binaries\Windows\</OutputPath>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
