Fix rendering with Qt5 in editor

--- a/Horde3DEditor/src/HordeSceneEditor/CMakeLists.txt
+++ b/Horde3DEditor/src/HordeSceneEditor/CMakeLists.txt
@@ -181,3 +181,6 @@ else()
 endif()
 
 TARGET_LINK_LIBRARIES(Horde3DEditor ${QT_LIBRARIES} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} HordeSceneEditorCore EditorLib QXmlTree QPropertyEditor ${LUA_LIBRARIES} Horde3D Horde3DUtils )
+
+file(COPY Styles DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+file(COPY SampleScenes DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
