--- a/Horde3DEditor/src/QTerrainNodeExtension/CMakeLists.txt
+++ b/Horde3DEditor/src/QTerrainNodeExtension/CMakeLists.txt
@@ -26,7 +26,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
-MESSAGE(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+#MESSAGE(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins)
 
