Cleanup sample scene Changed dependency to HordeSceneEditorCore to fix missing includes with cmake 3.8 Make terrain specific editor extensions/tools depend on Horde3D Terrain extension active status

--- a/Horde3DEditor/CMakeLists.txt
+++ b/Horde3DEditor/CMakeLists.txt
@@ -18,10 +18,12 @@ FIND_PACKAGE(Lua REQUIRED)
 add_subdirectory(src/EditorLib)
 add_subdirectory(src/QPropertyEditor)
 add_subdirectory(src/QXmlTree)
-add_subdirectory(src/QTerrainNodeExtension)
-add_subdirectory(src/TerrainToolPlugIn)
 add_subdirectory(src/tgaPlugIn)
 add_subdirectory(src/psdPlugIn)
 add_subdirectory(src/HordeSceneEditorCore)
 add_subdirectory(src/HordeSceneEditor)
 
+if(HORDE3D_BUILD_TERRAIN)
+    add_subdirectory(src/QTerrainNodeExtension)
+    add_subdirectory(src/TerrainToolPlugIn)
+endif(HORDE3D_BUILD_TERRAIN)
