--- a/Horde3DEditor/src/HordeSceneEditor/CMakeLists.txt
+++ b/Horde3DEditor/src/HordeSceneEditor/CMakeLists.txt
@@ -153,7 +153,7 @@ IF(MSVC)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 ENDIF(MSVC)
 
-INCLUDE_DIRECTORIES("../HordeSceneEditorCore" "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_SOURCE_DIR}/Horde3D/Bindings/C++" "${CMAKE_CURRENT_BINARY_DIR}" ${LUA_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_BINARY_DIR}/../HordeSceneEditorCore" )
+INCLUDE_DIRECTORIES("../HordeSceneEditorCore" "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_SOURCE_DIR}/Horde3D/Bindings/C++" "${CMAKE_CURRENT_BINARY_DIR}" ${LUA_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}  )
 
 ADD_DEFINITIONS(${QT_DEFINITIONS})
 
