- set _DEBUG in case it hasn't been set for debug builds (only MSVC sets _DEBUG by default) - fix resource index inconsistency due to releasing already released buffer (now all indices are passed by reference and set to zero) - added assert to resource release to avoid double free of an object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ IF(MSVC)
     SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup ")
 ENDIF(MSVC)
 
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG" )
+
 # Manage extensions.
 include(Extensions/Extensions.txt)
 
