CMake: Make extensions included automatically when they put to Extensions directory (no need to modify Extensions.txt anymore) CMake: Put terrain build option to terrain CMakeLists.txt Horde3D: Fix retrieval of GL_MAX_COMPUTE_SHADER_STORAGE_BLOCKS Horde3D: Allow setting a null texture resource in material to release references Horde3D: Add bindImageToTexture to allow binding of EGLImages to a Horde3D texture (in case OES_EGL_image extension is available) utOpenGL: Add optional OES_EGL_image method retrieval

--- a/Extensions/Terrain/CMakeLists.txt
+++ b/Extensions/Terrain/CMakeLists.txt
@@ -1,19 +1,18 @@
-add_subdirectory(Bindings)
-add_subdirectory(Source)
+# Terrain extension.
+option(HORDE3D_BUILD_TERRAIN "Build the terrain extension into Horde3D" ON)
 
-set( HORDE3D_EXTENSION_INSTALLS	"${HORDE3D_EXTENSION_INSTALLS}extMan().installExtension( new Horde3DTerrain::ExtTerrain() );\n"
-    PARENT_SCOPE	
-)
-set(HORDE3D_EXTENSION_INCLUDES "${HORDE3D_EXTENSION_INCLUDES}#include \"Extensions/Terrain/Source/extension.h\"\n"
-    PARENT_SCOPE
-)
-set(HORDE3D_EXTENSION_LIBS
-	${HORDE3D_EXTENSION_LIBS}
-	Horde3DTerrain
-    PARENT_SCOPE	
-)
+if(HORDE3D_BUILD_TERRAIN)
 
-IF(GLFW_FOUND)
-    include_directories(${GLFW_INCLUDE_DIR})
-    add_subdirectory(Sample)
-ENDIF(GLFW_FOUND)
+    add_subdirectory(Bindings)
+    add_subdirectory(Source)
+
+    set( HORDE3D_EXTENSION_INSTALLS "${HORDE3D_EXTENSION_INSTALLS}extMan().installExtension( new Horde3DTerrain::ExtTerrain() );\n" PARENT_SCOPE )
+    set( HORDE3D_EXTENSION_INCLUDES "${HORDE3D_EXTENSION_INCLUDES}#include \"Extensions/Terrain/Source/extension.h\"\n" PARENT_SCOPE )
+    set( HORDE3D_EXTENSION_LIBS ${HORDE3D_EXTENSION_LIBS} Horde3DTerrain PARENT_SCOPE )
+
+    IF(GLFW_FOUND)
+        include_directories(${GLFW_INCLUDE_DIR})
+        add_subdirectory(Sample)
+    ENDIF(GLFW_FOUND)
+
+endif(HORDE3D_BUILD_TERRAIN)
