Dynamically resolve some OpenGL core functions, to allow linking to libGLESv2.so provided by Mesa even if we use Desktop OpenGL. Use eglGetProcAddress if available

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -81,7 +81,11 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	FIND_PACKAGE(OpenGL REQUIRED)
-	target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${HORDE3D_EXTENSION_LIBS})
+        FIND_PACKAGE(EGL )
+        if( EGL_FOUND )
+            add_definitions( -DHAVE_EGL ${EGL_DEFINITIONS} )
+        endif( EGL_FOUND )
+        target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${EGL_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
 	install(TARGETS Horde3D
 		RUNTIME DESTINATION bin
 		LIBRARY DESTINATION lib
