Change the install path in the desktop file

--- a/Horde3DEditor/src/HordeSceneEditor/Resources/Horde3DEditor.desktop.in
+++ b/Horde3DEditor/src/HordeSceneEditor/Resources/Horde3DEditor.desktop.in
@@ -3,7 +3,7 @@ Name=Horde3D Editor
 Comment=Create 3D scenes compatible with Horde3D graphics engine
 Keywords=3D;editor;programming;scene;
 GenericName=Editor
-Exec="${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Horde3DEditor" %u
+Exec="${CMAKE_INSTALL_PREFIX}/Horde3DEditor" %u
 Icon=horde3deditor
 Terminal=false
 StartupNotify=true
