--- a/Horde3D/Samples/Framework/CMakeLists.txt
+++ b/Horde3D/Samples/Framework/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(SampleFramework OBJECT sampleapp.cpp)
 
-add_dependencies(SampleFramework project_glfw)
+include_directories(${GLFW_INCLUDE_DIR})
+#add_dependencies(SampleFramework project_glfw)
