--- a/Extensions/Overlays/Source/CMakeLists.txt
+++ b/Extensions/Overlays/Source/CMakeLists.txt
@@ -9,9 +9,8 @@ SET(OVERLAYS_EXTENSION_HEADERS
 )
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-        endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic")
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 ADD_LIBRARY( Horde3DOverlays STATIC ${OVERLAYS_EXTENSION_SOURCES}  ${OVERLAYS_EXTENSION_HEADERS} )
 
