--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -22,6 +22,7 @@ set(HORDE3D_SOURCES
 	egPrimitives.cpp
 	egRendererBaseGL2.cpp
 	egRendererBaseGL4.cpp
+	egRendererBaseGLES3.cpp
 	egRenderer.cpp
 	egResource.cpp
 	egScene.cpp
@@ -30,6 +31,7 @@ set(HORDE3D_SOURCES
 	egTexture.cpp
 	utImage.cpp
 	utOpenGL.cpp
+	utOpenGLES3.cpp
 	config.h
 	egAnimatables.h
 	egAnimation.h
@@ -51,6 +53,7 @@ set(HORDE3D_SOURCES
 	egRendererBase.h
 	egRendererBaseGL2.h
 	egRendererBaseGL4.h
+	egRendererBaseGLES3.h
 	egResource.h
 	egScene.h
 	egSceneGraphRes.h
@@ -59,13 +62,26 @@ set(HORDE3D_SOURCES
 	utImage.h
 	utTimer.h
 	utOpenGL.h
-        ../Shared/utPlatform.h
+	utOpenGLES3.h
+    ../Shared/utPlatform.h
 	../../Bindings/C++/Horde3D.h
-
 	${HORDE3D_EXTENSION_SOURCES}
 	)
 
 add_definitions(-DCMAKE )
+
+if (FORCE_GLES)
+	add_definitions(-DH3D_FORCE_GLES)
+	
+	# remove other opengl render backends from build
+	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL2.h")
+	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL2.cpp")
+	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL4.h")
+	list(REMOVE_ITEM HORDE3D_SOURCES "egRendererBaseGL4.cpp")
+	list(REMOVE_ITEM HORDE3D_SOURCES "utOpenGL.h")
+	list(REMOVE_ITEM HORDE3D_SOURCES "utOpenGL.cpp")
+
+endif (FORCE_GLES)
 
 add_library(Horde3D SHARED
 	${HORDE3D_SOURCES}
@@ -76,17 +92,38 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	IF(MSVC)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DSECURE_SCL=0")		
 	ENDIF(MSVC)
-	FIND_PACKAGE(OpenGL REQUIRED)
-	target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${HORDE3D_EXTENSION_LIBS})
+	
+	if (FORCE_GLES)
+		FIND_PACKAGE(OpenGLESv2 REQUIRED)
+		# add additional include paths for egl and gles
+		include_directories(${EGL_INCLUDE_DIR} ${OPENGLES2_INCLUDE_DIR})
+	
+		target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
+	else (FORCE_GLES)
+		FIND_PACKAGE(OpenGL REQUIRED)
+		target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${HORDE3D_EXTENSION_LIBS})
+	endif (FORCE_GLES)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	FIND_PACKAGE(OpenGL REQUIRED)
-        FIND_PACKAGE(EGL )
-        if( EGL_FOUND )
+    if (FORCE_GLES)
+		FIND_PACKAGE(OpenGLESv2 REQUIRED)
+		# add additional include paths for egl and gles
+		include_directories(${EGL_INCLUDE_DIR} ${OPENGLES2_INCLUDE_DIR})
+	
+		target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
+	else (FORCE_GLES)
+		FIND_PACKAGE(OpenGL REQUIRED)
+		if( EGL_FOUND )
             add_definitions( -DHAVE_EGL ${EGL_DEFINITIONS} )
         endif( EGL_FOUND )
+
         target_link_libraries(Horde3D ${OPENGL_gl_LIBRARY} ${EGL_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
+	endif (FORCE_GLES)        	
+
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic")
+		
 	install(TARGETS Horde3D
 		RUNTIME DESTINATION bin
 		LIBRARY DESTINATION lib
@@ -97,7 +134,7 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	set_target_properties(Horde3D PROPERTIES
 		FRAMEWORK TRUE
-		PRIVATE_HEADER "egAnimatables.h;egAnimation.h;egCamera.h;egCom.h;egExtensions.h;egGeometry.h;egLight.h;egMaterial.h;egModel.h;egModules.h;egParticle.h;egPipeline.h;egPrerequisites.h;egPrimitives.h;egRenderer.h;egRendererBase.h;egRendererBaseGL2.h;egRendererBaseGL4.h;egResource.h;egScene.h;egSceneGraphRes.h;egShader.h;egTexture.h;utImage.h;utTimer.h;utOpenGL.h;"
+		PRIVATE_HEADER "egAnimatables.h;egAnimation.h;egCamera.h;egCom.h;egExtensions.h;egGeometry.h;egLight.h;egMaterial.h;egModel.h;egModules.h;egParticle.h;egPipeline.h;egPrerequisites.h;egPrimitives.h;egRenderer.h;egRendererBase.h;egRendererBaseGL2.h;egRendererBaseGL4.h;egRendererBaseGLES3.h;egResource.h;egScene.h;egSceneGraphRes.h;egShader.h;egTexture.h;utImage.h;utTimer.h;utOpenGL.h;utOpenGLES3.h;"
 		PUBLIC_HEADER "../../Bindings/C++/Horde3D.h")
 	
 	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
